# python-repo-template

./: LICENSE  README.md  main.py  pyproject.toml
configs/: config.yaml
python_repo_template/: function.py
src/python_repo_template/data/: dataloader.py  synthetic.py
src/python_repo_template/training/: train.py
tests/: test_dataloader.py  test_function.py
